[package]
name = "terminal-invaders"
version = "0.1.0"
authors = ["Owen Lynch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.15"
termion = "1.5"
rand = "0.8.3"
nalgebra = "*"

[[bin]]
name = "terminal-invaders"
path = "src/main.rs"
